--- a/Views/Home/Results.cshtml
+++ b/Views/Home/Results.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Toma aí os resultados bacano</h1>
+    <h1 class="display-4">Toma aí os resultados</h1>
     <br/>
     <div>
         @Html.Raw(ViewBag.Weather)
